# bookstore

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.dev  pyproject.toml  test_dependencies.py
.github/workflows/: build.yml
bookstore/: settings.py  urls.py
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: __init__.py  first_tests.py
order/tests/test_viewsets/: test_order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: product_serializer.py
product/tests/: __init__.py  first_tests.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_serializer.py  test_product_viewset.py
product/viewsets/: product_viewset.py
