[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["pdr3392 <pchenr1que1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.1"
djangorestframework = "^3.13.1"
pytz = "^2022.2.1"
django-debug-toolbar = "^3.6.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
factory-boy = "^3.2.1"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
